# rama-pg

./: Cargo.toml  LICENSE  README.md
pgbouncer/: Cargo.toml  pgbouncer.ini
pgbouncer/src/: config.rs  main.rs  pg_authid.rs
rama-pg-example/: Cargo.toml
rama-pg-example/src/: main.rs
src/: auth.rs  cancel.rs  lib.rs  main.rs  pool.rs  proxy.rs  query.rs  route.rs  scram.rs
src/protocol/: codec.rs  message.rs  mod.rs  startup.rs
src/proxy/: custom.rs  direct.rs  mod.rs  pooled.rs
src/scram/: authid.rs  client.rs  crypto.rs  mod.rs  secret.rs
