[workspace]
members = ["rama-pg-example", "pgbouncer"]

[workspace.dependencies]
rama = { git = "https://github.com/plabayo/rama", rev = "c0a7afb6249996274bb56b978c22c2e85b41b3ae", features = ["tcp", "rustls", "ring"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.11"
base64 = "0.22"
subtle = "2"
rand = "0.10"
async-trait = "0.1"
rama-pg = { path = "." }

[package]
name = "rama-pg"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "An experimental Postgres wire-protocol proxy built on rama."

[dependencies]
rama = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
